<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp">

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/img_desc"
        android:scaleType="fitXY"
        android:src="@drawable/no_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/topLayout"
        android:layout_toStartOf="@id/icon_group"
        android:layout_toEndOf="@id/itemImage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/add_id"
                android:textStyle="bold"
                android:shadowColor="@color/lightGrey"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="6"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/idPlant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textAppearance="?attr/textAppearanceListItem" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:text="@string/add_name"
            android:textStyle="bold"
            android:shadowColor="@color/lightGrey"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="6"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:textAppearance="?attr/textAppearanceListItem" />

    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_margin"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:text="@string/add_latin"
                android:textStyle="bold"
                android:shadowColor="@color/lightGrey"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="6"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/latin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:textAppearance="?attr/textAppearanceListItem" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topLayout"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:text="@string/add_last"
                android:textStyle="bold"
                android:shadowColor="@color/lightGrey"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="6"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/last"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:textAppearance="?attr/textAppearanceListItem" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:text="@string/add_next"
                android:textStyle="bold"
                android:shadowColor="@color/lightGrey"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="6"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:textAppearance="?attr/textAppearanceListItem" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:text="@string/add_freq"
                android:textStyle="bold"
                android:shadowColor="@color/lightGrey"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="6"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/frequence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:textAppearance="?attr/textAppearanceListItem" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:text="@string/add_freq_season"
                android:textStyle="bold"
                android:shadowColor="@color/lightGrey"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="6"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/freq_season"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:textAppearance="?attr/textAppearanceListItem" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:text="@string/add_from"
                android:textStyle="bold"
                android:shadowColor="@color/lightGrey"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="6"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/season_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:text="@string/add_to"
                android:textStyle="bold"
                android:shadowColor="@color/lightGrey"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="6"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/season_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:textAppearance="?attr/textAppearanceListItem" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:text="@string/add_freq_nutrient"
                android:textStyle="bold"
                android:shadowColor="@color/lightGrey"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="6"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/freq_nutri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:textAppearance="?attr/textAppearanceListItem" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:text="@string/add_from"
                android:textStyle="bold"
                android:shadowColor="@color/lightGrey"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="6"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/nutri_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:text="@string/add_to"
                android:textStyle="bold"
                android:shadowColor="@color/lightGrey"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="6"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/nutri_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:textAppearance="?attr/textAppearanceListItem" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/icon_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentEnd="true"
        >
        <ImageView
            android:id="@+id/editIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/edit_icon2"
            android:contentDescription="@string/ic_edit_desc" />

        <ImageView
            android:id="@+id/waterIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/watering_icon"
            android:contentDescription="@string/ic_water_desc" />

    </LinearLayout>

</RelativeLayout>
